Fixed horizontal scroll and removed ds store

--- a/sass/article.scss
+++ b/sass/article.scss
@@ -13,7 +13,6 @@
 
 // Splashscreen
 #splash {
-    width: 99.5vw;
     padding-top: 15vh;
     padding-bottom: 22.5vh;
     display: flex;
