--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -38,7 +38,6 @@ h1 {
 
 // Latest article card
 #latest {
-    width: 99.5vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -66,11 +65,11 @@ h1 {
         background-position: -6.5rem -5rem;
         background-repeat: no-repeat;
 
-        transition: transform .1s;
+        transition: transform .05s;
 
         // Hover zoom
         &:hover {
-            transform: scale(1.1);
+            transform: scale(1.02);
         }
 
         // Heading text (small)
