--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,6 +1,5 @@
 // Central hero content
 #hero {
-    width: 99.5vw;
     height: calc(100vh - 75px); // minus nav
     display: flex;
     justify-content: center;
