--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,7 +45,6 @@ a {
 
 // Navbar
 nav {
-    width: 99.5vw;
     height: 75px;
     display: flex;
     justify-content: space-between;
